# data-app

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
data/: example.csv
docker/: Dockerfile.api  Dockerfile.ui
src/app_core/: repo.py
src/data_app_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py
ui/: App.py
