[project]
name = "data-app-starter"
version = "1.0.0"
description = "Full data app starter with FastAPI and Streamlit."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "pandas",
    "polars",
    "duckdb",
    "sqlalchemy",
    "python-dotenv",
    "streamlit",
    "requests",
    "plotly",
]
[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black", "isort"]
[tool.ruff]
line-length = 100
[tool.black]
line-length = 100
